# wealthfolio

./: .env.example  .env.web.example  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  biome.json  eslint.config.js  lefthook.yml  package.json  tsconfig.base.json  tsconfig.json
.claude/: CLAUDE.md
.cursor/rules/: rust-rules.mdc
.devcontainer/: devcontainer.json
.github/workflows/: pr-check.yml  release.yml
apps/backend/: package.json  tsconfig.json
apps/electron/: electron-builder.yml  package.json  tsconfig.json
apps/frontend/: package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
apps/server/: Cargo.toml  README.md
apps/tauri/: Cargo.toml  tauri.conf.json
crates/desktop-secrets/: Cargo.toml
crates/desktop-secrets/src/: lib.rs
docs/addons/: addon-api-reference.md  addon-architecture.md  addon-getting-started.md  addon-migration-guide-v2-to-v3.md  addons-overview.md
docs/architecture/: adapters.md  ai-assistant-architecture.md  electron-migration.md  market-data-quotes.md
e2e/: 09-bulk-holdings.spec.ts  README.md
packaging/server-prebuild/: README.md  wealthfolio.service.example
plans/goal-fullstack-ts-migration/: design.md  goal.md  plan.md  research.md  todo.md
plans/goal-tauri-to-electron-migration/: design.md  goal.md  plan.md  research.md  todo.md
scripts/: build-electron-sidecar.mjs  ci-check.sh  dev-electron.mjs  dev-web.mjs  electron-after-pack.cjs  merge-electron-update-metadata.mjs  run-e2e.mjs  stage-electron-renderer.mjs  wait-for-both-servers-to-be-ready.sh
(+308 files in other folders)
